--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -3,7 +3,7 @@
 <p>here are your stories</p>
 {{#if stories}}
 
-<table class="striped">
+<table id="root" class="striped">
     <thead>
         <tr>
             <th>Title</th>
