--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container login-container">
+    <div id="root" class="container login-container">
         <div class="card">
             <div class="card-content">
                 {{{body}}}
@@ -22,7 +22,9 @@
     </div>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" />
-    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
+
+    </script>
+</body>
 
 </html>
