--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
 <body>
     {{> _header}}
     {{> _add_btn}}
-    <div class="container">
+    <div id="root" class="container">
         {{{body}}}
     </div>
 
